--- a/src/Auth/Login.css
+++ b/src/Auth/Login.css
@@ -161,7 +161,7 @@
     
     .loader {
       border: 4px solid #f3f3f3;
-      border-top: 4px solid #3498db;
+      border-top: 4px solid #051018;
       border-radius: 50%;
       width: 40px;
       height: 40px;
@@ -177,4 +177,6 @@
       }
     }
     
-  
+    .login-button {
+        text-align: center;
+    }
