--- a/src/Sidebar/sidebar.css
+++ b/src/Sidebar/sidebar.css
@@ -1,7 +1,7 @@
 /* Sidebar Container */
 .sidebar-container {
-  width: 200px;
-  background-color: #2c3e50;
+  width: 215px;
+  background-color: #056c8c;
   height: 100vh;
   position: fixed;
   top: 0;
@@ -19,13 +19,10 @@
   justify-content: center;
   margin-bottom: 20px;
 }
-
-/* Sidebar Menu */
-.sidebar-menu {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  width: 100%;
+.sidebar-logo h2{
+  color: #fff;
+  text-decoration: none;
+  
 }
 
 .sidebar-menu li {
@@ -55,4 +52,13 @@
 .sidebar-link.active-link {
   background-color: #afc5dc9c;
   color: #fff;
+}
+ul.sidebar-menu {
+  text-decoration: none;
+  list-style: none;
+  width: 100%;
+  margin-left: -40px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
